--- a/index.html
+++ b/index.html
@@ -1,121 +1,191 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Baltic Digital Institute</title>
-  <!-- Tailwind CSS przez CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', 'Lato', sans-serif; }
-  </style>
-</head>
-<body class="bg-[#0A192F] text-white">
 
-  <!-- HEADER -->
-  <header class="flex items-center justify-between px-6 py-4 bg-[#0A192F]/90 fixed w-full top-0 z-50">
-    <div class="flex items-center space-x-3">
-      <img src="assets/svg/Logo main.svg" alt="BDI Logo" class="h-10">
-      <span class="text-xl font-bold">Baltic Digital Institute</span>
+  <!-- Tailwind CDN (tymczasowo) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style> body { font-family: 'Inter','Lato', sans-serif; } </style>
+</head>
+<body class="bg-[#0A192F] text-white antialiased">
+
+  <!-- HEADER (shared) -->
+  <header class="fixed top-0 left-0 right-0 bg-[#0A192F]/90 backdrop-blur z-50">
+    <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
+      <a href="index.html" class="flex items-center gap-3">
+        <img src="assets/svg/Logo main.svg" alt="BDI Logo" class="h-10" />
+        <span class="font-bold text-lg">Baltic Digital Institute</span>
+      </a>
+
+      <nav class="hidden md:flex gap-8 items-center text-sm font-medium">
+        <a href="index.html" class="hover:text-[#64FFDA]">Start</a>
+        <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
+        <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
+        <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
+      </nav>
+
+      <button id="menu-btn" class="md:hidden flex flex-col gap-1 p-1" aria-label="menu">
+        <span class="block w-6 h-0.5 bg-white"></span>
+        <span class="block w-6 h-0.5 bg-white"></span>
+        <span class="block w-6 h-0.5 bg-white"></span>
+      </button>
     </div>
-    <nav class="hidden md:flex space-x-6 text-white font-medium">
-      <a href="index.html" class="hover:text-[#64FFDA]">Strona główna</a>
-      <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
-      <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
-      <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
-    </nav>
-    <!-- Hamburger -->
-    <button id="menu-btn" class="md:hidden flex flex-col space-y-1">
-      <span class="block w-6 h-0.5 bg-white"></span>
-      <span class="block w-6 h-0.5 bg-white"></span>
-      <span class="block w-6 h-0.5 bg-white"></span>
-    </button>
+
+    <!-- mobile menu -->
+    <div id="mobile-menu" class="hidden md:hidden bg-[#0A192F]/95 text-center">
+      <a href="index.html" class="block px-6 py-3 hover:text-[#64FFDA]">Start</a>
+      <a href="o-nas.html" class="block px-6 py-3 hover:text-[#64FFDA]">O nas</a>
+      <a href="rozwiazania.html" class="block px-6 py-3 hover:text-[#64FFDA]">Rozwiązania</a>
+      <a href="kontakt.html" class="block px-6 py-3 hover:text-[#64FFDA]">Kontakt</a>
+    </div>
   </header>
 
-  <!-- MOBILE MENU -->
-  <div id="mobile-menu" class="hidden md:hidden fixed top-16 left-0 w-full bg-[#0A192F]/95 text-center space-y-4 py-6">
-    <a href="index.html" class="block text-lg hover:text-[#64FFDA]">Strona główna</a>
-    <a href="o-nas.html" class="block text-lg hover:text-[#64FFDA]">O nas</a>
-    <a href="rozwiazania.html" class="block text-lg hover:text-[#64FFDA]">Rozwiązania</a>
-    <a href="kontakt.html" class="block text-lg hover:text-[#64FFDA]">Kontakt</a>
-  </div>
-
   <!-- HERO -->
-  <section class="relative h-screen flex flex-col items-center justify-center text-center bg-cover bg-center" style="background-image: url('assets/img/Architekci cyfrowej odporności.png');">
-    <div class="absolute inset-0 bg-black/70"></div>
-    <div class="relative z-10 px-6">
-      <h1 class="text-4xl md:text-6xl font-bold mb-6">Architekci cyfrowej odporności</h1>
-      <p class="text-lg md:text-xl text-gray-300 max-w-2xl mx-auto mb-8">
-        Tworzymy przyszłość, w której sztuczna inteligencja i cyberbezpieczeństwo służą rozwojowi społeczeństwa i gospodarki.
-      </p>
-      <a href="kontakt.html" class="px-8 py-4 bg-[#64FFDA] text-[#0A192F] font-bold rounded-md shadow-lg hover:bg-[#52e0c5] transition">
-        Skontaktuj się z nami
-      </a>
-    </div>
-  </section>
-
-  <!-- FILARY -->
-  <section class="py-20 px-6 bg-[#0F2238] text-center">
-    <h2 class="text-3xl font-bold mb-12 text-[#64FFDA]">Nasze filary</h2>
-    <div class="grid md:grid-cols-3 gap-10 max-w-6xl mx-auto">
-      <div class="p-6 bg-[#0A192F] rounded-xl shadow-lg">
-        <h3 class="text-xl font-semibold mb-4">Sztuczna Inteligencja</h3>
-        <p class="text-gray-300 text-sm">
-          Opracowujemy i wdrażamy rozwiązania AI, które wspierają biznes, sektor publiczny i społeczeństwo.
+  <main class="pt-20">
+    <section class="relative h-screen flex items-center justify-center text-center">
+      <img src="assets/img/Architekci cyfrowej odporności.png" alt="Hero" class="absolute inset-0 w-full h-full object-cover object-center opacity-30" />
+      <div class="relative z-10 max-w-3xl px-6">
+        <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">Architekci cyfrowej odporności</h1>
+        <p class="text-lg md:text-xl text-gray-200 mb-8">
+          Baltic Digital Institute  — badania, certyfikacja i edukacja w obszarze AI i cyberbezpieczeństwa. Tworzymy
+          bezpieczną i etyczną przyszłość cyfrową dla regionu Morza Bałtyckiego.
         </p>
+        <div class="flex flex-col sm:flex-row gap-4 justify-center">
+          <a href="rozwiazania.html" class="px-6 py-3 border border-[#64FFDA] rounded-md text-[#64FFDA] hover:bg-[#64FFDA] hover:text-[#0A192F] transition">Poznaj rozwiązania</a>
+          <a href="kontakt.html" class="px-6 py-3 bg-[#64FFDA] rounded-md text-[#0A192F] font-semibold hover:bg-[#52e0c5] transition">Skontaktuj się z nami</a>
+        </div>
       </div>
-      <div class="p-6 bg-[#0A192F] rounded-xl shadow-lg">
-        <h3 class="text-xl font-semibold mb-4">Cyberbezpieczeństwo</h3>
-        <p class="text-gray-300 text-sm">
-          Budujemy odporność cyfrową organizacji i chronimy krytyczne dane przed zagrożeniami.
-        </p>
-      </div>
-      <div class="p-6 bg-[#0A192F] rounded-xl shadow-lg">
-        <h3 class="text-xl font-semibold mb-4">Edukacja i Transformacja</h3>
-        <p class="text-gray-300 text-sm">
-          Prowadzimy programy edukacyjne i doradcze, wspierając świadomą transformację cyfrową.
-        </p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- SOCIAL PROOF -->
-  <section class="py-16 px-6 bg-[#0A192F] text-center">
-    <h2 class="text-3xl font-bold mb-8 text-[#64FFDA]">Nasi partnerzy</h2>
-    <div class="flex flex-wrap justify-center gap-8 grayscale opacity-80">
-      <img src="assets/img/partner1.png" alt="Partner 1" class="h-12">
-      <img src="assets/img/partner2.png" alt="Partner 2" class="h-12">
-      <img src="assets/img/partner3.png" alt="Partner 3" class="h-12">
-      <img src="assets/img/partner4.png" alt="Partner 4" class="h-12">
-    </div>
-  </section>
+    <!-- O NAS (rozbudowany skrót) -->
+    <section id="about" class="py-16 bg-[#0F2238]">
+      <div class="max-w-6xl mx-auto px-6">
+        <div class="grid md:grid-cols-2 gap-10 items-center">
+          <div>
+            <h2 class="text-3xl font-bold text-[#64FFDA] mb-4">Kim jesteśmy</h2>
+            <p class="text-gray-300 leading-relaxed mb-6">
+              Baltic Digital Institute (BDI) to przekształcona organizacja z silnymi korzeniami w projektach społecznych i grantowych.
+              Naszym celem jest łączenie badań, wdrożeń i edukacji — z naciskiem na odpowiedzialne wykorzystanie AI i budowę odporności cyfrowej.
+            </p>
 
-  <!-- ABOUT PREVIEW -->
-  <section class="py-20 px-6 bg-[#0F2238] text-center">
-    <h2 class="text-3xl font-bold mb-6 text-[#64FFDA]">Poznaj naszą historię</h2>
-    <p class="max-w-3xl mx-auto text-gray-300 leading-relaxed mb-8">
-      Baltic Digital Institute to ośrodek badawczo-doradczy, który łączy naukę, biznes i sektor publiczny. 
-      Działamy na styku technologii, bezpieczeństwa i odpowiedzialnej innowacji.
-    </p>
-    <a href="o-nas.html" class="px-6 py-3 border border-[#64FFDA] text-[#64FFDA] rounded-md hover:bg-[#64FFDA] hover:text-[#0A192F] transition">
-      Dowiedz się więcej
-    </a>
-  </section>
+            <div class="space-y-4 text-gray-300">
+              <div>
+                <h3 class="font-semibold">Misja</h3>
+                <p class="text-sm">Przesuwamy granice efektywnego wykorzystania AI i cyberbezpieczeństwa w regionie Morza Bałtyckiego poprzez badania, wdrożenia i edukację.</p>
+              </div>
+              <div>
+                <h3 class="font-semibold">Wizja</h3>
+                <p class="text-sm">Być wiodącym katalizatorem transformacji cyfrowej w regionie, rozpoznawalnym dzięki doskonałości badawczej i etycznemu podejściu do technologii.</p>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <h3 class="text-xl font-bold mb-4">Szybki timeline</h3>
+            <ul class="text-gray-300 space-y-3">
+              <li><strong>2021</strong> — rejestracja Fundacji FINE; pierwsze projekty w regionie pomorskim.</li>
+              <li><strong>2022</strong> — przeniesienie siedziby do Kartuz; pierwsze przychody i granty.</li>
+              <li><strong>2023</strong> — ekspansja, otwarcie siedziby operacyjnej w Gdańsku; budżet > 1,1 mln PLN.</li>
+              <li><strong>2025</strong> — rebranding i wpis do sądu jako Baltic Digital Institute; rozszerzenie misji o AI i certyfikację.</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Zarząd + Rada (w sekcji O nas) -->
+        <div class="mt-12">
+          <h3 class="text-2xl font-bold text-[#64FFDA] mb-6">Zarząd & Rada Programowa</h3>
+          <div class="grid md:grid-cols-3 gap-6">
+            <!-- Zarząd: Krzysztof -->
+            <div class="bg-[#0A192F] p-6 rounded-xl shadow">
+              <div class="flex items-start gap-4">
+                <img src="assets/img/krzysztof-rek.jpg" alt="Krzysztof Rek" class="w-20 h-20 object-cover rounded-full bg-gray-700" />
+                <div>
+                  <h4 class="font-semibold">Krzysztof Rek</h4>
+                  <p class="text-sm text-gray-300 mb-2">Prezes Zarządu — lider transformacji cyfrowej; doświadczenie w IT, finansach i zarządzaniu.</p>
+                  <a href="https://www.linkedin.com/in/krzysztofrek" class="text-xs text-[#64FFDA] hover:underline">LinkedIn</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Zarząd: Monika -->
+            <div class="bg-[#0A192F] p-6 rounded-xl shadow">
+              <div class="flex items-start gap-4">
+                <img src="assets/img/monika-zawadzka.jpg" alt="Monika Zawadzka" class="w-20 h-20 object-cover rounded-full bg-gray-700" />
+                <div>
+                  <h4 class="font-semibold">Monika Zawadzka</h4>
+                  <p class="text-sm text-gray-300 mb-2">Wiceprezes — ekspertka ds. transformacji i ESG.</p>
+                  <a href="#" class="text-xs text-[#64FFDA] hover:underline">LinkedIn</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Rada Programowa (z jedną kartą przykładową) -->
+            <div class="bg-[#0A192F] p-6 rounded-xl shadow">
+              <h4 class="font-semibold mb-2">Rada Programowa</h4>
+              <p class="text-sm text-gray-300">Interdyscyplinarne zaplecze eksperckie: dr Adam Prządka, dr Karolina Janczukowicz, dr Zuzanna Wiorogórska i inni.</p>
+              <a href="o-nas.html" class="mt-3 inline-block text-sm text-[#64FFDA] hover:underline">Pełne biogramy</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Zaufanie / Partnerzy -->
+        <div class="mt-12 text-center">
+          <h3 class="text-2xl font-bold text-[#64FFDA] mb-6">Partnerzy i grantodawcy</h3>
+          <div class="flex flex-wrap justify-center gap-8 items-center">
+            <img src="assets/img/partner1.png" alt="Partner 1" class="h-12 grayscale opacity-80" />
+            <img src="assets/img/partner2.png" alt="Partner 2" class="h-12 grayscale opacity-80" />
+            <img src="assets/img/partner3.png" alt="Partner 3" class="h-12 grayscale opacity-80" />
+            <img src="assets/img/partner4.png" alt="Partner 4" class="h-12 grayscale opacity-80" />
+          </div>
+
+          <p class="text-gray-400 text-sm mt-6 max-w-3xl mx-auto">Logotypy to placeholdery — wgraj proszę oficjalne loga grantodawców i partnerów aby zwiększyć wiarygodność.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- FILARY (skrót + link do rozwiazania) -->
+    <section class="py-16 bg-[#0A192F]">
+      <div class="max-w-6xl mx-auto px-6 text-center">
+        <h2 class="text-3xl font-bold mb-8 text-[#64FFDA]">Nasze filary</h2>
+        <div class="grid md:grid-cols-3 gap-8">
+          <div class="p-6 bg-[#0F2238] rounded-xl">
+            <h4 class="font-semibold mb-2">AI Solutions</h4>
+            <p class="text-gray-300 text-sm">Wdrożenia modeli i agentów AI, automatyzacja operacji, MLOps i etyczna AI.</p>
+          </div>
+          <div class="p-6 bg-[#0F2238] rounded-xl">
+            <h4 class="font-semibold mb-2">Cyber Lab & Certyfikacja</h4>
+            <p class="text-gray-300 text-sm">Badania, testy bezpieczeństwa i ścieżka do akredytacji PCA.</p>
+          </div>
+          <div class="p-6 bg-[#0F2238] rounded-xl">
+            <h4 class="font-semibold mb-2">Edukacja</h4>
+            <p class="text-gray-300 text-sm">Programy szkoleniowe, kursy w BUR i programy grantowe.</p>
+          </div>
+        </div>
+
+        <div class="mt-8">
+          <a href="rozwiazania.html" class="inline-block px-6 py-3 border border-[#64FFDA] rounded-md text-[#64FFDA] hover:bg-[#64FFDA] hover:text-[#0A192F] transition">Pełne rozwiązania</a>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <!-- FOOTER -->
-  <footer class="bg-[#0A192F]/90 py-6 text-center text-gray-400 text-sm">
-    © 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.
+  <footer class="bg-[#0A192F]/95 text-gray-400 py-8">
+    <div class="max-w-6xl mx-auto px-6 text-center text-sm">
+      <p>ul. Hołdu Pruskiego 6, 80-741 Gdańsk • kontakt@baltic-digital.org</p>
+      <p class="mt-2">© 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
+    </div>
   </footer>
 
-  <!-- Script menu -->
   <script>
     const menuBtn = document.getElementById('menu-btn');
     const mobileMenu = document.getElementById('mobile-menu');
-    menuBtn.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
+    menuBtn.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
   </script>
 </body>
 </html>
