--- a/o-nas.html
+++ b/o-nas.html
@@ -1,113 +1,188 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>O nas — Baltic Digital Institute</title>
-  <!-- Tailwind CSS przez CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', 'Lato', sans-serif; }
-  </style>
+  <style> body { font-family: 'Inter','Lato', sans-serif; } </style>
 </head>
-<body class="bg-[#0A192F] text-white">
+<body class="bg-[#0A192F] text-white antialiased">
 
-  <!-- HEADER -->
-  <header class="flex items-center justify-between px-6 py-4 bg-[#0A192F]/90 fixed w-full top-0 z-50">
-    <div class="flex items-center space-x-3">
-      <img src="assets/svg/Logo main.svg" alt="BDI Logo" class="h-10">
-      <span class="text-xl font-bold">Baltic Digital Institute</span>
+  <!-- header (shared) -->
+  <header class="fixed top-0 left-0 right-0 bg-[#0A192F]/90 z-50">
+    <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
+      <a href="index.html" class="flex items-center gap-3"><img src="assets/svg/Logo main.svg" class="h-10" alt="" /><span class="font-bold">Baltic Digital Institute</span></a>
+      <nav class="hidden md:flex gap-8">
+        <a href="index.html" class="hover:text-[#64FFDA]">Start</a>
+        <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
+        <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
+        <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
+      </nav>
+      <button id="menu-btn" class="md:hidden p-1 flex flex-col gap-1" aria-label="menu">
+        <span class="block w-6 h-0.5 bg-white"></span>
+        <span class="block w-6 h-0.5 bg-white"></span>
+        <span class="block w-6 h-0.5 bg-white"></span>
+      </button>
     </div>
-    <nav class="hidden md:flex space-x-6 text-white font-medium">
-      <a href="index.html" class="hover:text-[#64FFDA]">Strona główna</a>
-      <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
-      <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
-      <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
-    </nav>
-    <!-- Hamburger -->
-    <button id="menu-btn" class="md:hidden flex flex-col space-y-1">
-      <span class="block w-6 h-0.5 bg-white"></span>
-      <span class="block w-6 h-0.5 bg-white"></span>
-      <span class="block w-6 h-0.5 bg-white"></span>
-    </button>
+
+    <div id="mobile-menu" class="hidden md:hidden bg-[#0A192F]/95 text-center">
+      <a href="index.html" class="block px-6 py-3 hover:text-[#64FFDA]">Start</a>
+      <a href="o-nas.html" class="block px-6 py-3 hover:text-[#64FFDA]">O nas</a>
+      <a href="rozwiazania.html" class="block px-6 py-3 hover:text-[#64FFDA]">Rozwiązania</a>
+      <a href="kontakt.html" class="block px-6 py-3 hover:text-[#64FFDA]">Kontakt</a>
+    </div>
   </header>
 
-  <!-- MOBILE MENU -->
-  <div id="mobile-menu" class="hidden md:hidden fixed top-16 left-0 w-full bg-[#0A192F]/95 text-center space-y-4 py-6">
-    <a href="index.html" class="block text-lg hover:text-[#64FFDA]">Strona główna</a>
-    <a href="o-nas.html" class="block text-lg hover:text-[#64FFDA]">O nas</a>
-    <a href="rozwiazania.html" class="block text-lg hover:text-[#64FFDA]">Rozwiązania</a>
-    <a href="kontakt.html" class="block text-lg hover:text-[#64FFDA]">Kontakt</a>
-  </div>
-
-  <!-- HERO -->
-  <section class="relative h-72 flex items-center justify-center text-center bg-[#0A192F]">
-    <h1 class="text-4xl md:text-5xl font-bold">O nas</h1>
-  </section>
-
-  <!-- MISJA -->
-  <section class="py-16 px-6 bg-[#0A192F] text-center">
-    <h2 class="text-3xl font-bold mb-6 text-[#64FFDA]">Nasza Misja</h2>
-    <p class="max-w-3xl mx-auto text-gray-300 leading-relaxed">
-      Budujemy cyfrową odporność Europy, łącząc naukę, biznes i sektor publiczny. 
-      Naszą misją jest rozwój sztucznej inteligencji, cyberbezpieczeństwa i odpowiedzialnej transformacji cyfrowej.
-    </p>
-  </section>
-
-  <!-- WIZJA -->
-  <section class="py-16 px-6 bg-[#0F2238] text-center">
-    <h2 class="text-3xl font-bold mb-6 text-[#64FFDA]">Nasza Wizja</h2>
-    <p class="max-w-3xl mx-auto text-gray-300 leading-relaxed">
-      Europa jako lider innowacji cyfrowych, opartych na etyce, bezpieczeństwie i zaufaniu społecznym. 
-      Chcemy być mostem pomiędzy nowoczesnymi technologiami a wartościami demokratycznymi.
-    </p>
-  </section>
-
-  <!-- WARTOŚCI -->
-  <section class="py-16 px-6 bg-[#0A192F] text-center">
-    <h2 class="text-3xl font-bold mb-12 text-[#64FFDA]">Nasze Wartości</h2>
-    <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-6xl mx-auto">
-      <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg">
-        <h3 class="text-xl font-semibold mb-4">Odpowiedzialność</h3>
-        <p class="text-gray-300 text-sm">
-          Działamy z myślą o dobru publicznym i zrównoważonym rozwoju.
-        </p>
+  <main class="pt-24">
+    <section class="py-12 bg-[#0F2238] text-center">
+      <div class="max-w-4xl mx-auto px-6">
+        <h1 class="text-4xl font-bold mb-4">O nas</h1>
+        <p class="text-gray-300">Mandat Strategiczy | Misja | Wizja | Wartości — zebrane w jednym miejscu, aby jasno komunikować, kim jesteśmy i dokąd zmierzamy.</p>
       </div>
-      <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg">
-        <h3 class="text-xl font-semibold mb-4">Bezpieczeństwo</h3>
-        <p class="text-gray-300 text-sm">
-          Cyberodporność i ochrona danych są fundamentem wszystkich działań.
-        </p>
+    </section>
+
+    <section class="py-12 max-w-6xl mx-auto px-6">
+      <h2 class="text-2xl font-bold text-[#64FFDA] mb-4">Mandat strategiczny</h2>
+      <p class="text-gray-300 leading-relaxed mb-6">
+        Nasz nadrzędny cel i definicje misji/wizji pochodzą z oficjalnych dokumentów strategicznych — to gwarancja spójności działań.
+      </p>
+
+      <div class="grid md:grid-cols-2 gap-8">
+        <div>
+          <h3 class="font-semibold mb-2">Misja</h3>
+          <p class="text-gray-300 text-sm leading-relaxed mb-4">
+            Przesuwamy granice efektywnego wykorzystania sztucznej inteligencji i cyberbezpieczeństwa w regionie Morza Bałtyckiego poprzez badania, innowacje, wdrożenia i edukację.
+          </p>
+
+          <h3 class="font-semibold mb-2">Wizja</h3>
+          <p class="text-gray-300 text-sm leading-relaxed">
+            Chcemy być wiodącym katalizatorem transformacyjnych rozwiązań w zakresie AI i cyberbezpieczeństwa, rozpoznawalnym globalnie dzięki doskonałości badawczej i etycznemu podejściu.
+          </p>
+        </div>
+
+        <div>
+          <h3 class="font-semibold mb-2">Wartości</h3>
+          <ul class="text-gray-300 space-y-2">
+            <li><strong>Innowacyjność i doskonałość</strong> — ciągłe podnoszenie poprzeczki.</li>
+            <li><strong>Odpowiedzialność i etyka</strong> — „Technologia z sumieniem”.</li>
+            <li><strong>Współpraca i otwartość</strong> — partnerstwa międzysektorowe.</li>
+            <li><strong>Wpływ społeczny</strong> — użycie technologii dla dobra publicznego.</li>
+          </ul>
+        </div>
       </div>
-      <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg">
-        <h3 class="text-xl font-semibold mb-4">Innowacyjność</h3>
-        <p class="text-gray-300 text-sm">
-          Łączymy badania naukowe i praktykę rynkową w unikalny sposób.
+    </section>
+
+    <!-- Rozszerzona historia i wyniki -->
+    <section class="py-12 bg-[#0A192F] text-gray-300">
+      <div class="max-w-6xl mx-auto px-6">
+        <h3 class="text-2xl font-bold mb-4 text-[#64FFDA]">Historia i rozwój</h3>
+        <p class="mb-6 leading-relaxed">
+          Fundacja FINE zarejestrowana w 2021, pierwsze projekty w Pomorskim, przeniesienie siedziby do Kartuz w 2022, otwarcie
+          siedziby operacyjnej w Gdańsku w 2023 oraz rebranding na Baltic Digital Institute w 2025. W 2023 zarządzaliśmy budżetem
+          przekraczającym 1,1 mln PLN — dowód na skalę i zdolność operacyjną.
         </p>
+
+        <h4 class="font-semibold mb-2">Wybrane fakty</h4>
+        <ul class="space-y-2">
+          <li>2021 — start, praca z NGO i wolontariat.</li>
+          <li>2022 — pierwsze przychody i grant "Pomorskie z Ukrainą".</li>
+          <li>2023 — Centrum Wsparcia Uchodźców, wzrost operacji.</li>
+          <li>2025 — zmiana nazwy i poszerzenie misji o AI i certyfikację.</li>
+        </ul>
       </div>
-      <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg">
-        <h3 class="text-xl font-semibold mb-4">Transparentność</h3>
-        <p class="text-gray-300 text-sm">
-          Wierzymy w otwartą komunikację i uczciwe partnerstwa.
+    </section>
+
+    <!-- Zarząd (szczegóły) -->
+    <section class="py-12">
+      <div class="max-w-6xl mx-auto px-6">
+        <h3 class="text-2xl font-bold text-[#64FFDA] mb-6">Zarząd</h3>
+
+        <div class="grid md:grid-cols-2 gap-6">
+          <article class="bg-[#0A192F] p-6 rounded-xl shadow">
+            <div class="flex gap-4">
+              <img src="assets/img/krzysztof-rek.jpg" alt="Krzysztof Rek" class="w-24 h-24 rounded-full object-cover bg-gray-700">
+              <div>
+                <h4 class="font-semibold">Krzysztof Rek — Prezes Zarządu</h4>
+                <p class="text-sm text-gray-300 leading-relaxed">
+                  Lider transformacji cyfrowej z doświadczeniem w ENERGA, Shell i akademii (SGH).
+                  Ekspert w zarządzaniu programami, Data Governance i strategii cyfrowej.
+                </p>
+                <p class="mt-2 text-xs text-gray-400"><a href="https://www.linkedin.com/in/krzysztofrek" class="text-[#64FFDA] hover:underline">Profil LinkedIn</a></p>
+              </div>
+            </div>
+          </article>
+
+          <article class="bg-[#0A192F] p-6 rounded-xl shadow">
+            <div class="flex gap-4">
+              <img src="assets/img/monika-zawadzka.jpg" alt="Monika Zawadzka" class="w-24 h-24 rounded-full object-cover bg-gray-700">
+              <div>
+                <h4 class="font-semibold">Monika Zawadzka — Wiceprezes</h4>
+                <p class="text-sm text-gray-300 leading-relaxed">
+                  Ekspertka ds. ESG i transformacji; doświadczenie w PKO, Pekao Leasing i sektorze prywatnym.
+                </p>
+                <p class="mt-2 text-xs text-gray-400"><a href="#" class="text-[#64FFDA] hover:underline">Profil LinkedIn</a></p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Rada Programowa (mini bio) -->
+    <section class="py-12 bg-[#0F2238]">
+      <div class="max-w-6xl mx-auto px-6">
+        <h3 class="text-2xl font-bold text-[#64FFDA] mb-6">Rada Programowa — wybrane osoby</h3>
+
+        <div class="grid md:grid-cols-3 gap-6 text-gray-300">
+          <div class="bg-[#0A192F] p-6 rounded-xl">
+            <h4 class="font-semibold">dr Adam Prządka</h4>
+            <p class="text-sm leading-relaxed">Data Scientist, doświadczenie w Schneider Electric i Nielsen; PhD (ESPCI Paris).</p>
+          </div>
+          <div class="bg-[#0A192F] p-6 rounded-xl">
+            <h4 class="font-semibold">dr Karolina Janczukowicz</h4>
+            <p class="text-sm leading-relaxed">Adiunkt, Uniwersytet Gdański — psycholingwistyka i dydaktyka.</p>
+          </div>
+          <div class="bg-[#0A192F] p-6 rounded-xl">
+            <h4 class="font-semibold">dr Zuzanna Wiorogórska</h4>
+            <p class="text-sm leading-relaxed">Adiunkt, UW — edukacja informacyjna i otwarta nauka.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Zaufanie i zasoby -->
+    <section class="py-12">
+      <div class="max-w-6xl mx-auto px-6 text-gray-300">
+        <h3 class="text-2xl font-bold text-[#64FFDA] mb-4">Zasoby i wiarygodność</h3>
+        <p class="leading-relaxed mb-4">
+          Siedziba operacyjna: ul. Hołdu Pruskiego 6, Gdańsk — Centrum Nowoczesnej Edukacji (200 m²) z salami szkoleniowymi.
         </p>
+        <p class="leading-relaxed mb-6">
+          Finansowo: 2023 — budżet >1,1 mln PLN (skokowy wzrost związany z programami grantowymi i projektami społecznymi).
+        </p>
+
+        <div class="flex flex-wrap gap-6 items-center">
+          <img src="assets/img/partner1.png" alt="" class="h-12 grayscale opacity-80" />
+          <img src="assets/img/partner2.png" alt="" class="h-12 grayscale opacity-80" />
+          <img src="assets/img/partner3.png" alt="" class="h-12 grayscale opacity-80" />
+        </div>
       </div>
+    </section>
+  </main>
+
+  <footer class="bg-[#0A192F]/95 text-gray-400 py-8">
+    <div class="max-w-6xl mx-auto px-6 text-center text-sm">
+      <p>ul. Hołdu Pruskiego 6, 80-741 Gdańsk • kontakt@baltic-digital.org</p>
+      <p class="mt-2">© 2025 Baltic Digital Institute</p>
     </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="bg-[#0A192F]/90 py-6 text-center text-gray-400 text-sm">
-    © 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.
   </footer>
 
-  <!-- Script menu -->
   <script>
     const menuBtn = document.getElementById('menu-btn');
     const mobileMenu = document.getElementById('mobile-menu');
-    menuBtn.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
+    menuBtn.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
   </script>
 </body>
 </html>
